update: cargo.toml

--- a/lessons/Cargo.toml
+++ b/lessons/Cargo.toml
@@ -2,6 +2,8 @@
 name = "the_rust_book_in_a_nutshell_lessons"
 version = "0.1.0"
 edition = "2021"
+description = "Lessons of the Rust book in a nutshell"
+license = "MIT"
 
 [dependencies]
 color-eyre = "0.6.2"
